@@ -1,8 +1,8 @@
 # frozen_string_literal: true
 
-class File
-  # NOTE: remove once minimum JRuby version is fully 2.7 compliant
-  def self.absolute_path? path
-    (::Pathname.new path).absolute?
-  end unless respond_to? :absolute_path?
-end
+File.singleton_class.prepend (Module.new do
+  # NOTE: JRuby < 9.4 doesn't implement this method; JRuby 9.4 implements it incorrectly
+  def absolute_path? path
+    (::Pathname.new path).absolute? && !(%r/\A[[:alpha:]][[:alnum:]\-+]*:\/\/\S/.match? path)
+  end
+end) if RUBY_ENGINE == 'jruby'
